--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-torch~=2.2.2
-tensorflow~=2.16.1
-transformers~=4.39.3
-tqdm~=4.66.2
-datasets~=2.18.0
-keras~=3.2.1
-scikit-learn~=1.4.2
-numpy~=1.26.4
-matplotlib~=3.8.4
-scipy~=1.13.0
-pandas~=2.2.2
-nltk~=3.8.1
-ekphrasis~=0.5.4
+codecarbon==3.0.1
+datasets==3.4.1
+emoji==2.14.1
+h5py==3.13.0
+matplotlib==3.10.3
+nltk==3.9.1
+numpy==2.2.6
+pandas==2.2.3
+Pillow==11.2.1
+pytorch_lightning==2.5.1
+scikit_learn==1.6.1
+torch==2.6.0
+torchmetrics==1.7.1
+transformers==4.49.0
+wandb==0.19.11
